--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "seed": "ts-node src/scripts/seed.ts"
+    "seed": "ts-node src/scripts/seed.ts",
+    "render-build": "npm install --include=dev && npm run build"
   },
   "dependencies": {
     "express": "^4.18.2",
